Closed
Bug 973187
Opened 12 years ago
Closed 12 years ago
typo in nsStyleGradient::HasCalc()
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla30
People
(Reporter: maksqwe1, Assigned: maksqwe1)
References
Details
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 (Beta/Release)
Build ID: 20140212131424
Steps to reproduce:
layout\style\nsStyleStruct.cpp 1545
return mBgPosX.IsCalcUnit() || mBgPosY.IsCalcUnit() || mAngle.IsCalcUnit() ||
mRadiusX.IsCalcUnit() || mRadiusX.IsCalcUnit();
I think should be:
return mBgPosX.IsCalcUnit() || mBgPosY.IsCalcUnit() || mAngle.IsCalcUnit() ||
mRadiusX.IsCalcUnit() || mRadiusY.IsCalcUnit();
| Assignee | ||
Updated•12 years ago
|
Component: Untriaged → Layout
Product: Firefox → Core
Version: 27 Branch → Trunk
| Assignee | ||
Updated•12 years ago
|
Component: Layout → CSS Parsing and Computation
(In reply to Maks Naumov from comment #0)
> layout\style\nsStyleStruct.cpp 1545
>
> return mBgPosX.IsCalcUnit() || mBgPosY.IsCalcUnit() || mAngle.IsCalcUnit()
> ||
> mRadiusX.IsCalcUnit() || mRadiusX.IsCalcUnit();
>
> I think should be:
> return mBgPosX.IsCalcUnit() || mBgPosY.IsCalcUnit() || mAngle.IsCalcUnit()
> ||
> mRadiusX.IsCalcUnit() || mRadiusY.IsCalcUnit();
Well, that's effectively submitting a patch, even though it's not in patch format. So r=dbaron, and I'll commit this for you later. Thanks.
Assignee: nobody → maksqwe1
Comment 3•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla30
Updated•12 years ago
|
QA Whiteboard: [qa-]
You need to log in
before you can comment on or make changes to this bug.
Description
•